# margarita-ai-realty

./: .env.example  LICENSE  PLAN.md  README.md  alembic.ini  pyproject.toml
alembic/: 001_initial_schema.py  env.py  script.py.mako
demo/: index.html
moduls_save/: vec_search.py
moduls_save/chat2/: language.py
project/alembic/: 001_initial_schema.py
project/src/app/: dependencies.py  exceptions.py  main.py
project/src/app/api/: middleware.py
project/src/app/api/v1/: chat.py  ingestion.py  leads.py  properties.py  router.py
project/src/app/calendar/: services.py
project/src/app/chat/: engine.py  language.py  memory.py
project/src/app/core/: config.py  constant.py  constants.py  logging,py  security.py
project/src/app/db/: base.py  engine.py
project/src/app/db/models/: ingestion.py  lead.py  messages.py  property.py  session.py  tenats.py  tetans.py
project/src/app/ingestion/: embedde.py  hasher.py  parser.py  pipeline.py
project/src/app/leads/: services.py  validator.py
project/src/app/llm/: client.py  router.py
project/src/app/llm/prompt/: booking.py  system_es.py
project/src/app/notification/: dispatcher.py  email.py  whatsapp.py
project/src/app/qualification/: extractor.py  score.py  signals.py
project/src/app/schemas/: ingestion.py  lead.py  search.py  tenant.py
project/src/app/search/: filter_extractor.py  filter_llm.py  hybrid.py  sql_search.py  vec_search.py
project/src/app/search/search2/: filter_extractor.py  filter_llm.py  hybrid.py  sql_search.py  vec_search.py
scripts/: propiedades_margarita.csv  seed_db.py
search_saving/search2/: filter_extractor.py  filter_llm.py
search_saving/search3/: filter_extractor.py  filter_llm.py  hybrid.py  sql_search.py
src/app/: dependencies.py  exceptions.py  main.py
src/app/api/: middleware.py
src/app/api/v1/: chat.py  ingestion.py  leads.py  properties.py  router.py
src/app/calendar/: services.py
src/app/chat/: engine.py  language.py  memory.py
src/app/core/: constants.py  logging.py  security.py
src/app/db/: engine.py
src/app/db/models/: ingestion.py  ingestion_log.py  lead.py  messages.py  property.py  session.py  tenant.py  tenats.py
src/app/ingestion/: embedder.py  hasher.py  parser.py  pipeline.py
src/app/leads/: services.py  validator.py
src/app/llm/: client.py  router.py
src/app/llm/prompt/: booking.py  system_es.py  systerm_en.py
src/app/notification/: dispatcher.py  email.py  whatsapp.py
src/app/qualification/: extractor.py  score.py  signals.py
src/app/schemas/: chat.py  ingestion.py  lead.py  property.py  search.py  tenant.py
src/app/search/: filter_extractor.py  filter_llm.py  hybrid.py  sql_search.py  vec_search.py
src/app/search/search2/: hybrid.py  sql_search.py  vec_search.py
test/: conftest.py
test/e2e/: test_chat_flow.py  test_ingestion_api.py  test_leads_api.py
test/integration/: test_calendar.py  test_chat_engine.py  test_ingestion.py  test_leads.py  test_notifications.py  test_qualification.py
test/unit/: test_config.py  test_filter_extractor.py  test_language.py  test_llm_router.py  test_memory.py  test_parser.py  test_scorer.py  test_security.py
