# pyproject.toml
[project]
name        = "margarita-ai-realty"
version     = "1.2.0"
description = "AI chatbot para inmobiliarias en Isla de Margarita, Venezuela"
readme      = "README.md"
requires-python = ">=3.11"

dependencies = [
    # ── FastAPI Stack ─────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",          # UploadFile en endpoints de ingestion

    # ── Pydantic v2 ───────────────────────────────────────────────
    "pydantic[email]>=2.10.0",           # EmailStr en schemas/lead.py
    "pydantic-settings>=2.6.0",          # Settings desde .env

    # ── Base de Datos ─────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",                 # Driver async SQLite
    "alembic>=1.14.0",                   # Migraciones versionadas
    "sqlite-vec>=0.1.6",                 # Vector search nativo en SQLite

    # ── LLM ───────────────────────────────────────────────────────
    "litellm>=1.55.0",                   # Gateway Groq + Gemini unificado
    "sentence-transformers>=3.3.0",      # Embeddings locales (paraphrase-multilingual-MiniLM-L12-v2)

    # ── Notificaciones ────────────────────────────────────────────
    "aiosmtplib>=3.0.0",                 # SMTP async sin bloquear event loop
    "httpx>=0.27.0",                     # HTTP async para WhatsApp Meta API

    # ── Google Calendar ───────────────────────────────────────────
    "google-api-python-client>=2.155.0",
    "google-auth>=2.37.0",
    "google-auth-httplib2>=0.2.0",

    # ── Logging ───────────────────────────────────────────────────
    "structlog>=24.4.0",

    # ── CSV / Excel ───────────────────────────────────────────────
    "pandas>=2.2.0",
    "openpyxl>=3.1.5",                   # Soporte .xlsx en pandas
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    # httpx ya en main — AsyncClient para tests de endpoints FastAPI
]

# ── Build System (src layout) ─────────────────────────────────────
# Necesario para que `uv sync` instale el paquete en modo editable.
# Después de `uv sync`, `from app.X import Y` funciona en uvicorn y pytest.
[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Declara que el paquete `app` vive en src/
packages = ["src/app"]

# ── Pytest ────────────────────────────────────────────────────────
[tool.pytest.ini_options]
# pythonpath = ["src"] hace que `from app.X import Y` funcione en los tests
# sin necesidad de instalar el paquete. Complementa el build-system arriba.
pythonpath   = ["src"]
asyncio_mode = "auto"           # pytest-asyncio — async/await en tests sin decorador
testpaths    = ["tests"]
python_files = ["test_*.py"]
python_classes  = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning:aiosqlite",
    "ignore::DeprecationWarning:sqlalchemy",
    "ignore::PendingDeprecationWarning",
]

# ── Ruff (linter opcional) ────────────────────────────────────────
[tool.ruff]
src        = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select  = ["E", "F", "I", "UP"]
ignore  = [
    "E501",   # line too long — manejado por el formatter
    "UP007",  # X | Y syntax — usamos typing.Union en alembic por compat
]

# ── Comandos de uso frecuente (documentación inline) ─────────────
#
# Setup inicial:
#   uv sync                                    → instala dependencias + paquete editable
#   uv run alembic upgrade head                → crea tablas en SQLite
#
# Desarrollo:
#   uv run uvicorn app.main:app --reload --port 8000
#
# Tests:
#   uv run pytest tests/unit/                  → rápido, sin DB real
#   uv run pytest tests/integration/           → con SQLite en memoria
#   uv run pytest tests/                       → suite completa
#
# Migraciones:
#   uv run alembic revision --autogenerate -m "descripcion"
#   uv run alembic upgrade head
#   uv run alembic downgrade -1
#
# Fix de imports tras confirmar pythonpath (una sola vez):
#   find src/ -name "*.py" -exec sed -i 's/from src\.app\./from app./g' {} +
